# Spelunky2SeedFinder

./: CMakeLists.txt
.github/workflows/: build.yml
injected/include/: Filter.h  LegacyState.h
injected/src/: FilterFindAnkhSkip.cpp  FilterFindVanHorsing.cpp  LegacyState.cpp  SeedFinder.cpp  SeedFinderUI.cpp  SeedFinderUtil.cpp  main.cpp
injector/: CMakeLists.txt
